--- a/store/templates/book.html
+++ b/store/templates/book.html
@@ -97,8 +97,8 @@
         </div>
         <!-- Navbar End -->
 
-        <!-- Modal Search Start -->
-        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <!-- Modal Search Start -->
+          <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
@@ -106,10 +106,10 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body d-flex align-items-center">
-                        <div class="input-group w-75 mx-auto d-flex">
-                            <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                            <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
-                        </div>
+                        <form class="input-group w-75 mx-auto d-flex" method="get" action="{% url 'store:search' %}">
+                            <input type="search" name="q" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
+                            <button type="submit" id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -179,9 +179,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-
                         <!-- Container for the embedded PDF viewer -->
                         <div class="col-sm-12" id="pdfContainer" style="display:none; margin-top: 20px;">
                             <iframe id="pdfViewer" width="100%" height="600px" frameborder="0"></iframe>
