--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -100,7 +100,7 @@
         <!-- Navbar End -->
 
 
-        <!-- Modal Search Start -->
+       <!-- Modal Search Start -->
         <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
@@ -109,15 +109,16 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body d-flex align-items-center">
-                        <div class="input-group w-75 mx-auto d-flex">
-                            <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                            <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
-                        </div>
+                        <form class="input-group w-75 mx-auto d-flex" method="get" action="{% url 'store:search' %}">
+                            <input type="search" name="q" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
+                            <button type="submit" id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
         <!-- Modal Search End -->
+
 
 
         <!-- Hero Start -->
@@ -128,8 +129,10 @@
                         <h4 class="mb-3 text-secondary">100% MasomoGPT </h4>
                         <h1 class="mb-5 display-3 text-primary">Kenyan Syllabus books & Assistant AI revision model</h1>
                         <div class="position-relative mx-auto">
-                            <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Search">
-                            <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Submit Now</button>
+                            <form  method="get" action="{% url 'store:search' %}">
+                                <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="search" name="q" placeholder="Search">
+                                <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;"id="search-icon-1">Submit Now</button>
+                           </form>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-5">
