--- a/store/templates/book.html
+++ b/store/templates/book.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8">
         <title>MasomoGPT Website</title>
@@ -24,26 +23,21 @@
         <link href="{% static 'lib/lightbox/css/lightbox.min.css'%}" rel="stylesheet">
         <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css'%}" rel="stylesheet">
 
-
         <!-- Customized Bootstrap Stylesheet -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
         <!-- Template Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
-
-    
     </head>
 
     <body>
-
         <!-- Spinner Start -->
-        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
 
-
-        <!-- Navbar start -->
+        <!-- Navbar Start -->
         <div class="container-fluid fixed-top">
             <div class="container topbar bg-primary d-none d-lg-block">
                 <div class="d-flex justify-content-between">
@@ -97,8 +91,8 @@
         </div>
         <!-- Navbar End -->
 
-          <!-- Modal Search Start -->
-          <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- Modal Search Start -->
+        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
@@ -119,8 +113,8 @@
         <div class="container-fluid py-5 mb-5 hero-header">
             <div class="container mt-5">
                 <div class="row">
-                    <!-- Sidebar Start -->
-                    <div class="col-lg-3">
+                    <!-- Sidebar Start (Visible on large devices) -->
+                    <div class="col-lg-3 d-none d-lg-block">
                         <div class="mb-3">
                             <h4>Categories</h4>
                             <ul class="list-unstyled text-center mb-5">
@@ -128,7 +122,7 @@
                                 <li>
                                     <div class="d-flex justify-content-between">
                                         <a class="d-flex m-2 py-2 bg-primary rounded-pill" href="{% url 'store:get_book_category' category.id %}">
-                                        <span class="text-dark" style="width: 130px;">{{ category.name }}</span>
+                                            <span class="text-dark" style="width: 130px;">{{ category.name }}</span>
                                         </a>
                                     </div>
                                 </li>
@@ -138,10 +132,35 @@
                         <div class="mb-3">
                             <h4 class="mb-2">Price</h4>
                             <input type="range" class="form-range w-100" id="rangeInput" name="rangeInput" min="0" max="500" value="0" oninput="amount.value=rangeInput.value">
-                            <output id="amount" name="amount" min-velue="0" max-value="500" for="rangeInput">0</output>
+                            <output id="amount" name="amount" min-value="0" max-value="500" for="rangeInput">0</output>
                         </div>
                     </div>
                     <!-- Sidebar End -->
+
+                    <!-- Horizontal Categories for Small Devices -->
+                    <div class="col-12 d-lg-none mb-3">
+                        <div class="tab-class text-center">
+                            <div class="row g-4 align-items-center">
+                                <div class="col-12 d-flex justify-content-center">
+                                    <ul class="nav nav-pills d-inline-flex text-center mb-3">
+                                        {% for category in categories %}
+                                        <li class="nav-item">
+                                            <a class="d-flex m-2 py-2 bg-primary rounded-pill" href="{% url 'store:get_book_category' category.id %}">
+                                                <span class="text-dark px-2">{{ category.name }}</span>
+                                            </a>
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <h4 class="mb-2">Price</h4>
+                            <input type="range" class="form-range w-100" id="rangeInput" name="rangeInput" min="0" max="500" value="0" oninput="amount.value=rangeInput.value">
+                            <output id="amount" name="amount" min-value="0" max-value="500" for="rangeInput">0</output>
+                        </div>
+                    </div>
+                    <!-- Horizontal Categories for Small Devices -->
 
                     <div class="col-lg-9 col-md-8">
                         <div class="row" id="bookDetails">
@@ -229,5 +248,4 @@
         <!-- Template Javascript -->
         <script src="{% static 'js/main.js'%}"></script>
     </body>
-
 </html>
