--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -26,13 +26,13 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link  href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Spinner Start -->
-    <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+    <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" role="status"></div>
     </div>
     <!-- Spinner End -->
@@ -81,12 +81,9 @@
                                 <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                             </a>
                             <a href="{% url 'store:signout' %}" class="my-auto">
-                                
                                 <i class="bi bi-arrow-right-square-fill" style="font-size: 2rem;"></i>
-                                
-                               
                             </a>
-                            {% else %}
+                        {% else %}
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
                             <a href="#" class="position-relative me-4 my-auto">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
@@ -95,17 +92,16 @@
                             <a href="{% url 'store:signin' %}" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
-                            {% endif %}
-                
-                        </div>
+                        {% endif %}
+                    </div>
                 </div>
             </nav>
         </div>
     </div>
     <!-- Navbar End -->
 
-      <!-- Modal Search Start -->
-      <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal Search Start -->
+    <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content rounded-0">
                 <div class="modal-header">
@@ -139,145 +135,107 @@
         <div class="container py-5">
             <h1 class="mb-4">MasomoGPT</h1>
             <div class="row g-4">
-                <!-- Sidebar Start -->
-                <div class="col-lg-3">
+                <!-- Sidebar Start (Visible on large devices) -->
+                <div class="col-lg-3 d-none d-lg-block">
                     <div class="mb-3">
                         <h4>Categories</h4>
                         <ul class="list-unstyled text-center mb-5">
                             {% for category in categories %}
-                            <li>
-                                <div class="d-flex justify-content-between">
-                                    <a class="d-flex m-2 py-2 bg-primary rounded-pill" href="{% url 'store:get_book_category' category.id %}">
-                                    <span class="text-dark" style="width: 130px;">{{ category.name }}</span>
-                                    </a>
-                                </div>
-                            </li>
+                                <li>
+                                    <div class="d-flex justify-content-between">
+                                        <a class="d-flex m-2 py-2 bg-primary rounded-pill" href="{% url 'store:get_book_category' category.id %}">
+                                            <span class="text-dark" style="width: 130px;">{{ category.name }}</span>
+                                        </a>
+                                    </div>
+                                </li>
                             {% endfor %}
                         </ul>
                     </div>
                     <div class="mb-3">
                         <h4 class="mb-2">Price</h4>
-                        <input type="range" class="form-range w-100" id="rangeInput" name="rangeInput" min="0" max="500" value="0" oninput="amount.value=rangeInput.value">
-                        <output id="amount" name="amount" min-value="0" max-value="500" for="rangeInput">0</output>
+                        <input type="range" class="form-range" min="0" max="10000" step="100" id="priceRange">
+                        <div class="d-flex justify-content-between">
+                            <span>$0</span>
+                            <span>$10000</span>
+                        </div>
                     </div>
                 </div>
                 <!-- Sidebar End -->
 
-                <!-- Books Start -->
+                <!-- Product Grid Start -->
                 <div class="col-lg-9">
                     <div class="row g-4">
-                        {% if books %}
-                            {% for book in books %}
-                            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                                <div class="card" style="width: 14rem;">
-                                    <img src="{{ book.coverpage.url }}" class="card-img-top" alt="{{ book.name }}" style="height: 200px; object-fit: cover;">
-                                    <div class="card-body">
-                                        <h6 class="card-title">{{ book.name }}</h6>
-                                        <p class="card-text">Price: {{ book.price }} sh</p>
-                                        <div class="rating mt-2">
-                                            <span class="average-rating">{{ book.totalrating|averagerating:book.totalreview }}</span>
-                                            <a href='getreview' class="total-reviews"><span class='totalrating'>{{ book.totalreview|add:-1 }}</span></a>
+                        {% for book in books %}
+                            <div class="col-md-4 col-sm-6">
+                                <div class="product-item bg-light">
+                                    <div class="position-relative overflow-hidden">
+                                        <img class="img-fluid w-100" src="{{ book.imageURL }}" alt="">
+                                        <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-2 py-1 px-2">New</div>
+                                    </div>
+                                    <div class="text-center py-4">
+                                        <a class="h6 text-decoration-none text-truncate" href="{% url 'store:get_book' book.id %}">{{ book.title }}</a>
+                                        <div class="d-flex align-items-center justify-content-center mt-2">
+                                            <h5>${{ book.price }}</h5>
+                                            <h6 class="text-muted ms-2"><del>${{ book.old_price }}</del></h6>
                                         </div>
-                                        <br>
-                                        <a href="{% url 'store:book' id=book.id %}" class="btn btn-primary btn-sm">View Book</a>
+                                        <div class="d-flex align-items-center justify-content-center mb-1">
+                                            <small class="fa fa-star text-primary me-1"></small>
+                                            <small class="fa fa-star text-primary me-1"></small>
+                                            <small class="fa fa-star text-primary me-1"></small>
+                                            <small class="fa fa-star text-primary me-1"></small>
+                                            <small class="fa fa-star text-primary me-1"></small>
+                                            <small>(99)</small>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            {% endfor %}
-                        {% else %}
-                            <h3 class="text-center mt-5">There are no books found.</h3>
-                        {% endif %}
+                        {% endfor %}
                     </div>
-                    <!-- Pagination -->
-                    {% if books.has_other_pages %}
-                    <div class="d-pagination">
-                        <ul class="pagination">
-                            {% if books.has_previous %}
-                                <li class="page-item">
-                                    <a class="page-link" href="?page=1">First</a>
-                                </li>                                
-                                <li class="page-item">
-                                    <a class="page-link" href="?page={{ books.previous_page_number }}">Previous</a>
-                                </li>
-                            {% endif %}
-                            {% for ord in books.paginator.page_range %}
-                                {% if books.number == ord %}
-                                    <li class="page-item active">
-                                        <span class="page-link">{{ ord }}
-                                            <span class="sr-only">(current)</span>
-                                        </span>
-                                    </li>
-                                {% elif ord > books.number|add:'-3' and ord < books.number|add:'3' %}
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page={{ ord }}">{{ ord }}</a>
-                                    </li>
-                                {% endif %}
-                            {% endfor %}
-                            {% if books.has_next %}
-                                <li class="page-item">
-                                    <a class="page-link" href="?page={{ books.next_page_number }}">Next</a>
-                                </li>
-                                <li class="page-item">
-                                    <a class="page-link" href="?page={{ books.paginator.num_pages }}">Last</a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </div>
-                    {% endif %}
                 </div>
-                <!-- Books End -->
+                <!-- Product Grid End -->
             </div>
         </div>
     </div>
     <!-- Shop End -->
 
-
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5">
+    <div class="container-fluid bg-secondary text-dark mt-5 py-5">
         <div class="container">
             <div class="row g-5">
-                <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white mb-4">Get In Touch</h5>
-                    <p><i class="fas fa-map-marker-alt me-3"></i>Nairobi, Kenya</p>
-                    <p><i class="fas fa-envelope me-3"></i>info@masomogpt.com</p>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-dark mb-4">Get In Touch</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>32 Nabutiti Rd, Nairobi, Kenya</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254 710 123 456</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@masomogpt.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-dark btn-social" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-dark btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-dark btn-social" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-dark btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link text-white-50" href="#">About Us</a>
-                    <a class="btn btn-link text-white-50" href="#">Contact Us</a>
-                    <a class="btn btn-link text-white-50" href="#">Privacy Policy</a>
-                    <a class="btn btn-link text-white-50" href="#">Terms & Condition</a>
-                    <a class="btn btn-link text-white-50" href="#">Career</a>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-dark mb-4">Quick Links</h4>
+                    <a class="btn btn-link" href="#">About Us</a>
+                    <a class="btn btn-link" href="#">Contact Us</a>
+                    <a class="btn btn-link" href="#">Our Services</a>
+                    <a class="btn btn-link" href="#">Privacy Policy</a>
+                    <a class="btn btn-link" href="#">Terms & Condition</a>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white mb-4">Newsletter</h5>
-                    <p>We are different, we create what you deserve. MasomoGPT is just a start!</p>
-                    <div class="position-relative w-100">
-                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-dark mb-4">Popular Links</h4>
+                    <a class="btn btn-link" href="#">About Us</a>
+                    <a class="btn btn-link" href="#">Contact Us</a>
+                    <a class="btn btn-link" href="#">Our Services</a>
+                    <a class="btn btn-link" href="#">Privacy Policy</a>
+                    <a class="btn btn-link" href="#">Terms & Condition</a>
                 </div>
-            </div>
-        </div>
-        <div class="container mt-5">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">MasomoGPT</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="#">Home</a>
-                            <a href="#">Cookies</a>
-                            <a href="#">Help</a>
-                            <a href="#">FAQs</a>
-                        </div>
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-dark mb-4">Newsletter</h4>
+                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
             </div>
@@ -285,24 +243,38 @@
     </div>
     <!-- Footer End -->
 
+    <!-- Copyright Start -->
+    <div class="container-fluid bg-dark text-light border-top border-secondary py-4">
+        <div class="container">
+            <div class="row g-5">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="mb-md-0">&copy; <a class="text-primary" href="#">MasomoGPT</a>. All Rights Reserved.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <p class="mb-0">Designed by <a class="text-primary" href="#">MasomoGPT Team</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Copyright End -->
+
     <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="fas fa-arrow-up"></i></a>
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'lib/wow/wow.min.js'%}"></script>
-    <script src="{% static 'lib/easing/easing.min.js'%}"></script>
-    <script src="{% static 'lib/waypoints/waypoints.min.js'%}"></script>
-    <script src="{% static 'lib/counterup/counterup.min.js'%}"></script>
-    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js'%}"></script>
-    <script src="{% static 'lib/lightbox/js/lightbox.min.js'%}"></script>
+    <script src="{% static 'lib/easing/easing.min.js' %}"></script>
+    <script src="{% static 'lib/waypoints/waypoints.min.js' %}"></script>
+    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'lib/counterup/counterup.min.js' %}"></script>
+    <script src="{% static 'lib/parallax/parallax.min.js' %}"></script>
+    <script src="{% static 'lib/lightbox/js/lightbox.min.js' %}"></script>
 
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
-
 
           
     
