--- a/store/templates/book.html
+++ b/store/templates/book.html
@@ -28,6 +28,9 @@
 
         <!-- Template Stylesheet -->
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     </head>
 
     <body>
@@ -54,7 +57,7 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6"><img src="img/MasomoGPT_logo-nobg.png" alt=""></h1></a>
+                <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6"><img src="{% static 'img/MasomoGPT_logo-nobg.png'%}" alt=""></h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -199,8 +202,8 @@
                             </div>
                         </div>
                         <!-- Container for the embedded PDF viewer -->
-                        <div class="col-sm-12" id="pdfContainer" style="display:none; margin-top: 20px;">
-                            <iframe id="pdfViewer" width="100%" height="600px" frameborder="0"></iframe>
+                        <div class="col-sm-12" id="pdfContainer">
+                            <div id="pdfViewer"></div>
                         </div>
                     </div>
                 </div>
@@ -231,12 +234,140 @@
             function loadPDF(url) {
                 var pdfContainer = document.getElementById('pdfContainer');
                 var pdfViewer = document.getElementById('pdfViewer');
-                var bookDetails = document.getElementById('bookDetails');
-                pdfViewer.src = url;
+                pdfViewer.innerHTML = ''; // Clear previous PDF pages
+    
                 pdfContainer.style.display = 'block';
-                bookDetails.style.display = 'none'; // Hide the book details
+    
+                // Hide book details if needed
+                var bookDetails = document.getElementById('bookDetails');
+                if (bookDetails) {
+                    bookDetails.style.display = 'none';
+                }
+    
+                // Load the PDF using pdf.js
+                pdfjsLib.getDocument(url).promise.then(function(pdf) {
+                    var numPages = pdf.numPages;
+    
+                    for (var i = 1; i <= numPages; i++) {
+                        renderPage(pdf, i, pdfViewer);
+                    }
+                }).catch(function(error) {
+                    console.error('Error loading PDF: ' + error);
+                });
+            }
+    
+            function renderPage(pdf, pageNumber, pdfViewer) {
+                pdf.getPage(pageNumber).then(function(page) {
+                    var viewport = page.getViewport({ scale: 1 });
+                    var canvasWrapper = document.createElement('div');
+                    canvasWrapper.classList.add('canvas-wrapper');
+                    var canvas = document.createElement('canvas');
+                    var context = canvas.getContext('2d');
+                    canvas.height = viewport.height;
+                    canvas.width = viewport.width;
+                    canvasWrapper.appendChild(canvas);
+                    pdfViewer.appendChild(canvasWrapper);
+    
+                    var renderContext = {
+                        canvasContext: context,
+                        viewport: viewport
+                    };
+                    page.render(renderContext);
+                });
             }
         </script>
+
+        
+
+        <!-- Footer Start -->
+        <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
+            <div class="container py-5">
+                <div class="pb-4 mb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
+                    <div class="row g-4">
+                        <div class="col-lg-3">
+                            <a href="#">
+                                <h1 class="text-primary mb-0">MasomoGPT</h1>
+                                <p class="text-secondary mb-0">1st AI revision model</p>
+                            </a>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="position-relative mx-auto">
+                                <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
+                                <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="d-flex justify-content-end pt-3">
+                                <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-youtube"></i></a>
+                                <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-5">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-light mb-3">Why you should use us!</h4>
+                            <p class="mb-4">typesetting, remaining essentially unchanged. It was 
+                                popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                            <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex flex-column text-start footer-item">
+                            <h4 class="text-light mb-3">Shop Info</h4>
+                            <a class="btn-link" href="">About Us</a>
+                            <a class="btn-link" href="">Contact Us</a>
+                            <a class="btn-link" href="">Privacy Policy</a>
+                            <a class="btn-link" href="">Terms & Condition</a>
+                            <a class="btn-link" href="">FAQs & Help</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex flex-column text-start footer-item">
+                            <h4 class="text-light mb-3">Account</h4>
+                            <a class="btn-link" href="">My Account</a>
+                            <a class="btn-link" href="">MasomoGPT</a>
+                            <a class="btn-link" href="">Book store</a>
+                            <a class="btn-link" href="">Favorite list</a>
+                            <a class="btn-link" href="">Read History</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-light mb-3">Contact</h4>
+                            <p>Address: Nairobi, Kenya</p>
+                            <p>Email: info@masomogpt.com</p>
+                            <p>Phone: +25477917702</p>
+                            <p>Payment Accepted</p>
+                            <img src="img/payment.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer End -->
+
+        <!-- Copyright Start -->
+        <div class="container-fluid copyright bg-dark py-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        <span class="text-light"><a href="#"><i class="fas fa-copyright text-light me-2"></i>www.masomogpt.com</a>, All right reserved.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Copyright End -->
+
+
+
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>   
+
+            
         <!-- JavaScript Libraries -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
