--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -84,7 +84,7 @@
                             </a>
                             {% else %}
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                            <a href="{% url "store:favorite_books" %}" class="position-relative me-4 my-auto">
+                            <a href="{% url "store:signin" %}" class="position-relative me-4 my-auto">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
                                 
                             </a>
